--- a/index.html
+++ b/index.html
@@ -1,73 +1,303 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HY Yazılım - Giriş</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f8ff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    .login-container {
-      background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-      width: 300px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>HY Yazılım - Giriş</title>
+<style>
+  :root {
+    --bg-color: #e0f7fa;
+    --text-color: #000;
+    --card-bg: #fff;
+    --accent: #00bcd4;
+    --accent-dark: #0097a7;
+  }
+  [data-theme="dark"] {
+    --bg-color: #121212;
+    --text-color: #fff;
+    --card-bg: #1e1e1e;
+    --accent: #00e5ff;
+    --accent-dark: #007b91;
+  }
+  * {
+    margin:0; padding:0; box-sizing:border-box;
+    font-family:"Segoe UI", sans-serif;
+  }
+  body {
+    background: var(--bg-color);
+    color: var(--text-color);
+    min-height: 100vh;
+    padding: 1rem;
+    transition: all 0.4s ease;
+  }
+  header {
+    background: var(--accent);
+    color: white;
+    text-align: center;
+    padding: 1.5rem 0;
+    font-size: 2.5rem;
+    font-weight: bold;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+    margin-bottom: 1.5rem;
+    user-select: none;
+  }
+  .dark-toggle {
+    position: fixed;
+    top: 1rem; right: 1rem;
+    background: var(--card-bg);
+    border: none;
+    border-radius: 50%;
+    width: 40px; height: 40px;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    font-size: 1.5rem;
+    color: var(--accent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background 0.3s ease;
+    z-index: 100;
+  }
+  .dark-toggle:hover {
+    background: var(--accent);
+    color: var(--card-bg);
+  }
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    user-select: none;
+  }
+  nav button {
+    background: var(--accent);
+    border: none;
+    padding: 0.6rem 1.5rem;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1.1rem;
+    transition: background 0.3s ease;
+  }
+  nav button:hover {
+    background: var(--accent-dark);
+  }
+  main {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    max-width: 900px;
+    margin: 0 auto;
+  }
+  .card {
+    background: var(--card-bg);
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    width: 320px;
+    animation: fadeIn 0.5s ease forwards;
+  }
+  .card h2 {
+    margin-bottom: 1.2rem;
+    color: var(--accent);
+    text-align: center;
+  }
+  .card form input {
+    width: 100%;
+    padding: 0.7rem;
+    margin: 0.5rem 0 1.2rem 0;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+  }
+  .card form button {
+    width: 100%;
+    padding: 0.8rem;
+    background: var(--accent);
+    border: none;
+    border-radius: 12px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  .card form button:hover {
+    background: var(--accent-dark);
+  }
+  /* Modal */
+  .modal-overlay {
+    position: fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: rgba(0,0,0,0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 200;
+  }
+  .modal {
+    background: var(--card-bg);
+    max-width: 480px;
+    width: 90%;
+    border-radius: 20px;
+    padding: 1.5rem 2rem;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    position: relative;
+  }
+  .modal h2 {
+    margin-bottom: 1rem;
+    color: var(--accent);
+    user-select: none;
+  }
+  .modal p {
+    line-height: 1.4;
+  }
+  .modal-close {
+    position: absolute;
+    top: 10px; right: 15px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--accent);
+    font-weight: bold;
+  }
+  @keyframes fadeIn {
+    from {opacity: 0; transform: translateY(20px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
+</style>
 </head>
 <body>
-  <div class="login-container">
+<button class="dark-toggle" aria-label="Tema değiştir" title="Tema değiştir" onclick="toggleTheme()">🌓</button>
+
+<header>HY Yazılım</header>
+
+<nav>
+  <button id="aboutBtn">Hakkımda</button>
+  <button id="contactBtn">İletişim</button>
+  <button id="projectsBtn">Projelerim</button>
+</nav>
+
+<main>
+  <div class="card">
     <h2>Giriş Yap</h2>
-    <form id="login-form">
-      <input type="text" id="username" placeholder="Kullanıcı Adı" required>
-      <input type="password" id="password" placeholder="Şifre" required>
+    <form id="loginForm">
+      <input type="text" name="username" placeholder="Kullanıcı Adı" required />
+      <input type="password" name="password" placeholder="Şifre" required />
       <button type="submit">Giriş Yap</button>
     </form>
   </div>
 
-  <script>
-    document.getElementById("login-form").addEventListener("submit", function(e) {
-      e.preventDefault();
-      // Buraya istersen kullanıcı adı ve şifre kontrolü de ekleyebilirsin
+  <div class="card">
+    <h2>Kayıt Ol</h2>
+    <form id="registerForm">
+      <input type="text" name="new_username" placeholder="Yeni Kullanıcı Adı" required />
+      <input type="email" name="email" placeholder="E-posta" required />
+      <input type="password" name="new_password" placeholder="Şifre" required />
+      <button type="submit">Kayıt Ol</button>
+    </form>
+  </div>
+</main>
+
+<!-- Modal -->
+<div class="modal-overlay" id="modalOverlay" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+  <div class="modal" role="document">
+    <button class="modal-close" aria-label="Kapat" onclick="closeModal()">×</button>
+    <h2 id="modalTitle"></h2>
+    <div id="modalBody"></div>
+  </div>
+</div>
+
+<script>
+  function toggleTheme() {
+    const html = document.documentElement;
+    if(html.getAttribute('data-theme') === 'dark') {
+      html.removeAttribute('data-theme');
+      localStorage.setItem('theme', 'light');
+    } else {
+      html.setAttribute('data-theme', 'dark');
+      localStorage.setItem('theme', 'dark');
+    }
+  }
+  window.onload = function() {
+    const savedTheme = localStorage.getItem('theme');
+    if(savedTheme === 'dark') {
+      document.documentElement.setAttribute('data-theme', 'dark');
+    }
+  };
+
+  // Modal açma
+  function showModal(title, content) {
+    document.getElementById('modalTitle').textContent = title;
+    document.getElementById('modalBody').innerHTML = content;
+    document.getElementById('modalOverlay').style.display = 'flex';
+  }
+
+  // Modal kapatma
+  function closeModal() {
+    document.getElementById('modalOverlay').style.display = 'none';
+  }
+
+  document.getElementById('aboutBtn').addEventListener('click', () => {
+    showModal('Hakkımda', `
+      <p>HYYazılım olarak, bilgisayarınızda görmek istediğiniz özel yazılımları sizin ihtiyaçlarınıza göre geliştiriyoruz.
+Sitemize giriş yapıp başvuru formunu doldurduğunuzda, taleplerinizi inceleyip sizinle en kısa sürede iletişime geçiyoruz.
+Siz isteyin, biz kodlayalım.</p>
+    `);
+  });
+
+  document.getElementById('contactBtn').addEventListener('click', () => {
+    showModal('İletişim', `
+      <p>E-posta: <a href="mailto:hasanyusufyildiz35@gmail.com">hasanyusufyildiz35@gmail.com</a></p>
+      <p>Telefon: 0 555 163 18 50</p>
+    `);
+  });
+
+  document.getElementById('projectsBtn').addEventListener('click', () => {
+    showModal('Projelerim', `
+      <ul>
+        <li><a href="https://drive.google.com/uc?export=download&id=GOOGLE_DRIVE_FILE_ID_1" target="_blank" rel="noopener noreferrer">Proje 1 - HYController.exe</a></li>
+        <li><a href="https://drive.google.com/uc?export=download&id=GOOGLE_DRIVE_FILE_ID_2" target="_blank" rel="noopener noreferrer">Proje 2 - MesajlasmaUygulamasi.exe</a></li>
+      </ul>
+    `);
+  });
+
+  // Kayıt formu
+  document.getElementById('registerForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    const newUsername = this.new_username.value.trim();
+    const newPassword = this.new_password.value;
+    if(newUsername === "" || newPassword === "") {
+      alert("Lütfen kullanıcı adı ve şifreyi eksiksiz girin.");
+      return;
+    }
+    // localStorage'a kaydet (basit, gerçek uygulamada şifreyi hashlemelisin)
+    localStorage.setItem('kullaniciadi', newUsername);
+    localStorage.setItem('kullanicisifre', newPassword);
+    alert("Kayıt başarılı! Artık giriş yapabilirsiniz.");
+    this.reset();
+  });
+
+  // Giriş formu
+  document.getElementById('loginForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    const username = this.username.value.trim();
+    const password = this.password.value;
+
+    const kayitliUsername = localStorage.getItem('kullaniciadi');
+    const kayitliPassword = localStorage.getItem('kullanicisifre');
+
+    if(username === kayitliUsername && password === kayitliPassword) {
+      // Doğruysa yönlendir
       window.location.href = "basvuruformu.html";
-    });
-  </script>
+    } else {
+      alert("Kullanıcı adı veya şifre yanlış!");
+    }
+  });
+</script>
 </body>
 </html>
